--- a/JssProject/main/static/css/index.css
+++ b/JssProject/main/static/css/index.css
@@ -1,5 +1,5 @@
 body{
-    margin: 0;
+    margin: 10;
     padding: 50px;
 }
 
@@ -16,6 +16,7 @@ a{
     flex-direction: column;
     align-items: center;
     margin-bottom: 30px;
+    margin: 30px;
 }
 
 .all_jss{
