--- a/JssProject/main/templates/index.html
+++ b/JssProject/main/templates/index.html
@@ -35,9 +35,19 @@
         <p>자기소개서 작성</p>
     </div>
 
+    <a href="{% url 'my_index' %}">
+        <button>내 자기소개서만 보기</button>
+    </a>
+    <a href="{% url 'index' %}">
+        <button>모든 자기소개서 보기</button>
+    </a>
+
+    <br>
+
     {% for jss in all_jss %}
     <a href="{% url 'detail' jss.id %}">
     <div class="all_jss">
+        <p>{{jss.author}}</p>
         <p>{{jss.title}}</p>
 
         <p>{{jss.content}}</p>
