--- a/JssProject/main/templates/detail.html
+++ b/JssProject/main/templates/detail.html
@@ -18,3 +18,23 @@
 <a href="{% url 'update' my_jss.id %}"><button>수정</button></a>
 <a href="{% url 'delete' my_jss.id %}"><button>삭제</button></a>
 {% endif %}
+
+{% if user == my_jss.author %}
+<form method="POST" action="{% url 'create_comment' my_jss.id %}">
+    {% csrf_token %}
+    {{comment_form}}
+    <input type="submit" value="확인">
+</form>
+
+{% for comment in my_jss.comment_set.all %}
+
+<p>
+    {{comment.author}}📢 {{comment.content}}
+    {% if user == comment.author %}
+<a href="{% url 'delete_comment' my_jss.id comment.id %}">
+    <button>삭제</button>
+</a>
+{% endif %}
+</p>
+{% endfor %}
+{% endif %}
