--- a/JssProject/main/templates/index.html
+++ b/JssProject/main/templates/index.html
@@ -35,13 +35,14 @@
         <p>자기소개서 작성</p>
     </div>
 
+    {% if user == my_jss.author %}
     <a href="{% url 'my_index' %}">
         <button>내 자기소개서만 보기</button>
     </a>
     <a href="{% url 'index' %}">
         <button>모든 자기소개서 보기</button>
     </a>
-
+    {% endif %}
     <br>
 
     {% for jss in all_jss %}
